[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-insumer"
version = "0.10.7"
description = "LangChain tools for InsumerAPI — condition-based access across 33 blockchains. Wallet trust profiles, EAS attestations, Gitcoin Passport, Farcaster ID, staking positions, compliance templates, ACP/UCP commerce, domain verification, merchant onboarding, USDC/USDT/BTC key purchase, and credit management. ECDSA-signed booleans, optional Merkle proofs, 26 tools. Used by DJD Agent Score (Coinbase x402)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "The Insumer Model", email = "contact@insumermodel.com"},
]
keywords = [
    "langchain",
    "blockchain",
    "attestation",
    "on-chain-verification",
    "ecdsa",
    "web3",
    "privacy",
    "on-chain",
    "ai-agents",
    "condition-based-access",
    "token-gating",
    "nft-verification",
    "agent-trust",
    "merkle-proof",
    "eas-attestation",
    "compliance",
    "kyc",
    "acp",
    "ucp",
    "agentic-commerce",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "langchain-core>=0.2.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://insumermodel.com/developers/"
Documentation = "https://insumermodel.com/llms-full.txt"
Repository = "https://github.com/douglasborthwick-crypto/langchain-insumer"
"API Reference" = "https://insumermodel.com/openapi.yaml"
"Bug Tracker" = "https://github.com/douglasborthwick-crypto/langchain-insumer/issues"

[tool.setuptools.packages.find]
include = ["langchain_insumer*"]
